--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -163,12 +163,12 @@
                 </select>
             </div>
             <div class="filter-tag position-relative">
-                <select class="form-select" id="titleFilter">
-                    <option value="">All Jobs</option>
-                    <option value="工程師">工程師</option>
-                    <option value="設計師">設計師</option>
-                    <option value="產品經理">產品經理</option>
-                    <option value="數據分析">數據分析</option>
+                <select class="form-select" id="tagFilter">
+                    <option value="">Tags</option>
+                    <option value="Care">Care</option>
+                    <option value="Women-Friendly">Women-Friendly</option>
+                    <option value="Service">Service</option>
+                    <option value="Packing">Packing</option>
                 </select>
             </div>
             <div class="filter-tag position-relative">
@@ -189,7 +189,7 @@
                 </select>
             </div>
             <div class="filter-tag position-relative">
-                <select class="form-select" id="tagFilter">
+                <select class="form-select" id="otherFilter">
                     <option value="">所有標籤</option>
                     <option value="前端">前端</option>
                     <option value="後端">後端</option>
