--- a/code/static/css_test/style.css
+++ b/code/static/css_test/style.css
@@ -10503,3 +10503,7 @@ button.active {
 }
 
 /*# sourceMappingURL=style.css_test.map */
+#map {
+  width: 100%;
+  height: 400px; /* 或 50vh、100vh 等 */
+}
