--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -355,6 +355,9 @@ select.form-select:hover {
         padding: 0.5rem 1rem;
         border-radius: 20px;
         font-size: 0.9rem;
+         border: 3px solid #f8c8dc; /* 浅粉色边框 */
+        border-radius: 10px; /* 圆角 */
+        margin-right: 10px;
     }
 
     .job-description li {
