--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -307,6 +307,12 @@
                     </div>
                     <div class="job-description">
                         <h5 class="mb-3">Description:</h5>
+                        <p><strong></strong></p>
+                        <div class="job-tags mb-3">
+                            {% for tag in job.tags.split(',') %}
+                            <span class="badge bg-light text-dark border me-2">{{ tag.strip() }}</span>
+                            {% endfor %}
+                        </div>
                         <ul class="list-unstyled">
                             {% for line in job.full_desc.split('\n') %}
                             <li class="mb-2">
@@ -535,14 +541,15 @@ select.form-select:active {
                             <strong>Education: </strong>${job.education}
                         </div>
                     </div>
+
+                </div>
+                <div class="job-description">
+                    <h5 class="mb-3">Description:</h5>
                     <div class="job-tags mt-3">
                         ${job.tags.split(',').map(tag =>
                             `<span class="badge bg-light text-dark border me-2">${tag.trim()}</span>`
                         ).join('')}
                     </div>
-                </div>
-                <div class="job-description">
-                    <h5 class="mb-3">Description:</h5>
                     <ul class="list-unstyled">
                         ${job.full_desc.split('\n').map(line =>
                             `<li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> ${line}</li>`
