change a little about job

--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -177,7 +177,7 @@
             </div>
             <div class="filter-tag position-relative">
                 <select class="form-select" id="tagFilter">
-                    <option value="">tags</option>
+                    <option value="">Tags</option>
                     <option value="Care">Care</option>
                      <option value="E-commerce">E-commerce</option>
                     <option value="Education">Education</option>
