--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -84,7 +84,7 @@
                                     <a href="contact.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>Content Us</h5>
+                                            <h5>Contact Us</h5>
                                             <p>Send your feedback here!</p>
                                         </div>
                                     </a>
@@ -178,7 +178,7 @@
 
 
                 <div class="card">
-                    <a class="index-jump-aboutus" href="aboutus.html">About Us <i class="arrow_right"></i></a>
+                    <a class="index-jump-aboutus" href="/about-us">About Us <i class="arrow_right"></i></a>
                     <p class="index-little-white" data-wow-delay="0.2s">Click to learn more about us.</p>
                 </div>
 
@@ -500,7 +500,7 @@
                         <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
                             <h3 class="f_title">Company</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="Aboutus.html">About Us</a></li>
+                                <li><a href="/about-us">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
 
 <!--                                <li><a href="#">Careers</a></li>-->
